--- a/index.html
+++ b/index.html
@@ -84,10 +84,9 @@
   <!-- Apps Section -->
   <section id="apps" class="section">
     <h2>Apps</h2>
-    <p style="font-size: x-small;">(IN DEVELOPMENT)</p>
+    <p style="font-size: medium;">(IN DEVELOPMENT)</p>
     <div class="apps-section">
       <a href="pages/apps/nina/index.html" class="app-link">Nina.AI</a>
-      <a href="pages/apps/moodify/index.html" class="app-link">Moodify</a>
     </div>
   </section>
 
