--- a/pages/apps/nina/index.html
+++ b/pages/apps/nina/index.html
@@ -4,12 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nina | Rendani</title>
+
+    <!-- Main CSS -->
     <link href="../../../assets/css/main.css">
+
+    <!-- External JS Libraries -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/prism.min.js"></script>
+
+    <!-- Tailwind CSS -->
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+
+    <!-- Prism Theme CSS (for code highlighting) -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/themes/prism-tomorrow.min.css" rel="stylesheet" />
+
+    <!-- Custom Styles -->
     <style>
         #avatar-container {
             background: linear-gradient(to bottom, #1a1a2e, #16213e);
@@ -20,13 +30,19 @@
     </style>
 </head>
 <body class="bg-gray-100">
+
     <div class="flex flex-col h-screen max-w-4xl mx-auto p-4">
+        <!-- Avatar Container -->
         <div id="avatar-container" style="width: 400px; height: 400px;"></div>
+
+        <!-- Chat Container -->
         <div class="chat-container bg-white rounded-lg shadow-lg flex flex-col">
+            <!-- Messages Section -->
             <div id="messages" class="flex-1 p-4 overflow-y-auto space-y-4">
-                <!-- Messages will be inserted here -->
+                <!-- Messages will be inserted here dynamically -->
             </div>
 
+            <!-- Chat Input Form -->
             <form id="chat-form" class="p-4 border-t">
                 <div class="flex space-x-4">
                     <input
@@ -48,6 +64,8 @@
             </form>
         </div>
     </div>
+
+    <!-- External Scripts -->
     <script src="../../../assets/js/API.js"></script>
     <script src="../../../assets/js/script.js"></script>
     <script src="avatar.js"></script>
