--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
 
   <!-- Apps Section -->
   <section id="apps" class="section">
-    <h2>Apps</h2>
+    <h2>Apps not available.</h2>
     <p style="font-size: medium;">(IN DEVELOPMENT)</p>
     <div class="apps-section">
-      <a href="pages/apps/nina/index.html" class="app-link">Nina.AI</a>
+      <!--<a href="pages/apps/nina/index.html" class="app-link">Nina.AI</a>-->
     </div>
   </section>
 
