--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   <!-- Hero Section -->
   <section id="home" class="hero">
     <h1>Welcome.</h1>
-    <p>Explore the best in AI-powered apps and mood-based music. Stay tuned for exciting updates!</p>
+    <p>Explore the best in AI-powered apps and 3D applicatios. Stay tuned for exciting updates!</p>
   </section>
 
   <!-- Apps Section -->
