--- a/index.html
+++ b/index.html
@@ -69,28 +69,22 @@
   <!-- Header Section -->
   <header>
     <nav>
-      <a href="#home">Home</a>
+      <!--<a href="#home">Home</a>
       <a href="#about">About</a>
       <a href="#apps">Apps</a>
-    </nav>
+    </nav>-->
   </header>
 
   <!-- Hero Section -->
-  <section id="home" class="hero">
-    <h1>Welcome.</h1>
-    <p>Explore the best in AI-powered apps and 3D applicatios. Stay tuned for exciting updates!</p>
-  </section>
-
-  <!-- Apps Section -->
+    <h1 style="font-size: xxx-large;">Coming Soon.</h1>
+  <!-- Apps Section
   <section id="apps" class="section">
     <h2>Apps not available.</h2>
     <p style="font-size: medium;">(IN DEVELOPMENT)</p>
     <div class="apps-section">
-      <!--<a href="pages/apps/nina/index.html" class="app-link">Nina.AI</a>-->
+      <!--<a href="pages/apps/nina/index.html" class="app-link">Nina.AI</a>
     </div>
-  </section>
-
-  <!-- Footer -->
+</sectio>-->
   <footer>
     <div class="footer-socials"></div>
     <p>&copy; 2025 Rendani. All rights reserved.</p>
