--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Explore, Code, and Listen to Music - Featuring Nina.AI, Moodify, and more.">
+  <meta name="description" content="Explore, Code, and Listen to Music - Featuring Nina.AI and more.">
   <title>Explore, Code and Listen to Music | Rendani</title>
   <link rel="stylesheet" href="assets/css/main.css">
   <style>
@@ -23,6 +23,12 @@
     .hero p {
       font-size: 1.2rem;
       margin-bottom: 30px;
+    }
+
+    .about {
+      margin: 40px auto;
+      padding: 20px;
+      text-align: center;
     }
 
     .apps-section {
@@ -76,15 +82,28 @@
   </header>
 
   <!-- Hero Section -->
-    <h1 style="font-size: xxx-large;">Coming Soon.</h1>
-  <!-- Apps Section
-  <section id="apps" class="section">
-    <h2>Apps not available.</h2>
-    <p style="font-size: medium;">(IN DEVELOPMENT)</p>
-    <div class="apps-section">
-      <!--<a href="pages/apps/nina/index.html" class="app-link">Nina.AI</a>
+  <section class="hero">
+    <h1>Welcome to My Multi-Tool Website!</h1>
+    <p>Explore, Code, and Listen to Music with Nina.AI and more.</p>
+  </section>
+
+  <!-- About Section -->
+  <section class="about" id="about">
+    <h2>About</h2>
+    <p>This repository contains the source code for the <a href="https://manugeni.is-a.dev/">Multi-Tool</a> website. The website serves as a multi-tool platform, providing various functionalities and features.</p>
+    <a href="https://github.com/manugeni/manugeni.github.io" class="app-link">Learn more</a>
+  </section>
+
+  <!-- Apps Section -->
+  <section id="apps" class="apps-section">
+    <h2>Apps Under Development</h2>
+    <p>(IN DEVELOPMENT)</p>
+    <div>
+      <!-- Example App Link -->
+      <a href="pages/apps/nina/index.html" class="app-link">Nina.AI</a>
     </div>
-</sectio>-->
+  </section>
+
   <footer>
     <div class="footer-socials"></div>
     <p>&copy; 2025 Rendani. All rights reserved.</p>
@@ -93,4 +112,4 @@
   <!-- Scripts -->
   <script type="module" src="assets/js/script.js"></script>
 </body>
-</html>
+  </html>
