--- a/index.html
+++ b/index.html
@@ -1,115 +1,60 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Explore, Code, and Listen to Music - Featuring Nina.AI and more.">
-  <title>Explore, Code and Listen to Music | Rendani</title>
-  <link rel="stylesheet" href="assets/css/main.css">
-  <style>
-    /* Additional styling for main page */
-    .hero {
-      text-align: center;
-      padding: 50px 20px;
-      background: linear-gradient(135deg, #1e1e1e, #121212);
-      color: var(--primary-text-color);
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Rendani | Explore, Code and Enjoy</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css"></script>
+    <style>
+        :root {
+            --primary: #2563eb;
+            --secondary: #475569;
+            --background: #0f172a;
+            --text: #f8fafc;
+        }
 
-    .hero h1 {
-      font-size: 2.5rem;
-      margin-bottom: 15px;
-    }
-
-    .hero p {
-      font-size: 1.2rem;
-      margin-bottom: 30px;
-    }
-
-    .about {
-      margin: 40px auto;
-      padding: 20px;
-      text-align: center;
-    }
-
-    .apps-section {
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      margin: 40px auto;
-      padding: 20px;
-      flex-wrap: wrap;
-    }
-
-    .app-link {
-      display: inline-block;
-      padding: 20px;
-      border: 2px solid var(--accent-color);
-      border-radius: 10px;
-      text-decoration: none;
-      font-size: 1.2rem;
-      color: var(--primary-text-color);
-      background-color: var(--card-background);
-      transition: all 0.3s ease;
-      text-align: center;
-      width: 200px;
-    }
-
-    .app-link:hover {
-      background-color: var(--accent-color);
-      color: var(--background-color);
-    }
-
-    .footer-socials a {
-      margin: 0 10px;
-      font-size: 1.5rem;
-      color: var(--primary-text-color);
-      transition: color 0.3s ease;
-    }
-
-    .footer-socials a:hover {
-      color: var(--accent-color);
-    }
-  </style>
+        .dark {
+            background-color: var(--background);
+            color: var(--text);
+        }
+    </style>
 </head>
-<body>
-  <!-- Header Section -->
-  <header>
-    <nav>
-      <!--<a href="#home">Home</a>
-      <a href="#about">About</a>
-      <a href="#apps">Apps</a>
-    </nav>-->
-  </header>
+<body class="dark">
+    <!-- Navigation -->
+    <nav class="fixed top-0 w-full bg-slate-900 shadow-lg z-50">
+        <div class="container mx-auto px-6 py-4">
+            <div class="flex items-center justify-between">
+                <div class="text-xl font-bold">Rendani</div>
+                <div class="flex items-center space-x-6">
+                    <a href="index.html" class="hover:text-blue-400">Home</a>
+                    <a href="/apps/albert-ai/" class="hover:text-blue-400">Albert AI</a>
+                    <a href="/apps/corebell-engine/" class="hover:text-blue-400">Corebell Engine</a>
+                </div>
+            </div>
+        </div>
+    </nav>
 
-  <!-- Hero Section -->
-  <section class="hero">
-    <h1>Welcome to My Multi-Tool Website!</h1>
-    <p>Explore, Code, and Listen to Music with Nina.AI and more.</p>
-  </section>
+    <!-- Main Content -->
+    <main class="container mx-auto px-6 pt-24">
+        <section class="min-h-screen flex flex-col justify-center items-center">
+            <h1 class="text-4xl font-bold mb-4">Explore, Code and Enjoy</h1>
+            <p class="text-xl text-gray-400 mb-8">Welcome to my digital space</p>
+            <div class="flex space-x-4">
+                <a href="/apps/albert-ai/" class="bg-blue-600 hover:bg-blue-700 text-white px-6 py-3 rounded-lg transition-colors">
+                    Chat with Albert
+                </a>
+                <a href="/apps/corebell-engine/" class="bg-slate-700 hover:bg-slate-600 text-white px-6 py-3 rounded-lg transition-colors">
+                    Explore Corebell
+                </a>
+            </div>
+        </section>
+    </main>
 
-  <!-- About Section -->
-  <section class="about" id="about">
-    <h2>About</h2>
-    <p>This repository contains the source code for the <a href="https://manugeni.is-a.dev/">Multi-Tool</a> website. The website serves as a multi-tool platform, providing various functionalities and features.</p>
-    <a href="https://github.com/manugeni/manugeni.github.io" class="app-link">Learn more</a>
-  </section>
-
-  <!-- Apps Section -->
-  <section id="apps" class="apps-section">
-    <h2>Apps Under Development</h2>
-    <p>(IN DEVELOPMENT)</p>
-    <div>
-      <!-- Example App Link -->
-      <a href="pages/apps/nina/index.html" class="app-link">Nina.AI</a>
-    </div>
-  </section>
-
-  <footer>
-    <div class="footer-socials"></div>
-    <p>&copy; 2025 Rendani. All rights reserved.</p>
-  </footer>
-
-  <!-- Scripts -->
-  <script type="module" src="assets/js/script.js"></script>
+    <!-- Footer -->
+    <footer class="bg-slate-900 py-6 fixed bottom-0 w-full">
+        <div class="container mx-auto px-6 text-center text-gray-400">
+            <p>&copy; 2025 Rendani. All rights reserved.</p>
+        </div>
+    </footer>
 </body>
   </html>
