--- a/apps/corebell-engine/index.html
+++ b/apps/corebell-engine/index.html
@@ -35,7 +35,7 @@
                 <div class="text-xl font-bold">Rendani</div>
                 <div class="flex items-center space-x-6">
                     <a href="/" class="hover:text-blue-400">Home</a>
-                    <a href="/apps/albert-ai/" class="hover:text-blue-400">Albert</a>
+                    <a href="/apps/albert-ai/" class="hover:text-blue-400">Albert AI</a>
                     <a href="/apps/corebell-engine/" class="hover:text-blue-400">Corebell Engine</a>
                 </div>
             </div>
