--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="flex items-center justify-between">
                 <div class="text-xl font-bold">Rendani</div>
                 <div class="flex items-center space-x-6">
-                    <a href="index.html" class="hover:text-blue-400">Home</a>
+                    <a href="/" class="hover:text-blue-400">Home</a>
                     <a href="/apps/albert-ai/" class="hover:text-blue-400">Albert AI</a>
                     <a href="/apps/corebell-engine/" class="hover:text-blue-400">Corebell Engine</a>
                 </div>
