Updated link on css

--- a/index.html
+++ b/index.html
@@ -4,22 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rendani | Explore, Code and Enjoy</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css"></script>
+    <link rel="stylesheet" href="/data/css/main.css">
     <style>
-        :root {
-            --primary: #2563eb;
-            --secondary: #475569;
-            --background: #0f172a;
-            --text: #f8fafc;
-        }
-
-        .dark {
-            background-color: var(--background);
-            color: var(--text);
-        }
-    </style>
 </head>
-<body class="dark">
+<body>
     <!-- Navigation -->
     <nav class="fixed top-0 w-full bg-slate-900 shadow-lg z-50">
         <div class="container mx-auto px-6 py-4">
