Updated link on css

--- a/apps/albert-ai/index.html
+++ b/apps/albert-ai/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Albert | Rendani</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css"></script>
+    <link rel="stylesheet" href="/data/css/main.css">
     <style>
         :root {
             --primary: #2563eb;
