--- a/apps/corebell-engine/index.html
+++ b/apps/corebell-engine/index.html
@@ -4,28 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Corebell Engine | Rendani</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css"></script>
-    <style>
-        :root {
-            --primary: #2563eb;
-            --secondary: #475569;
-            --background: #0f172a;
-            --text: #f8fafc;
-        }
-
-        .dark {
-            background-color: var(--background);
-            color: var(--text);
-        }
-
-        .feature-card {
-            transition: transform 0.2s ease-in-out;
-        }
-
-        .feature-card:hover {
-            transform: translateY(-5px);
-        }
-    </style>
+    <link rel="stylesheet" href="/data/css/main.css">
 </head>
 <body class="dark">
     <!-- Navigation -->
