--- a/pages/apps/nina-chat/index.html
+++ b/pages/apps/nina-chat/index.html
@@ -9,7 +9,7 @@
     <title>Code, Plan, Imagine and Create - Nina AI | Corebell</title>
 </head>
 <nav>
-    <a class="nav-link" href="/index.html"><img src="/data/images/NinaAI_Logo.png" align="left" alt="Corebell Logo"></a>
+    <a class="nav-link" href="/"><img src="/data/images/NinaAI_Logo.png" align="left" alt="Corebell Logo"></a>
     <a class="nav-link" href="/pages/downloads/index.html">Downloads</a>
     <a class="nav-link" href="/pages/games/index.html">Games</a>
     <a class="nav-link" href="/pages/apps/moodify/index.html">Moodify</a>
