--- a/pages/apps/moodify/index.html
+++ b/pages/apps/moodify/index.html
@@ -10,7 +10,7 @@
     <title>A Music web player, that does more for you! - Moodify | Corebell</title>
 </head>
 <nav>
-    <a class="nav-link" href="/"><img src="/data/images/Moodify_Logo.png" align="left" alt="Corebell Logo"></a>
+    <a class="nav-link" href="/"><img src="/data/images/Moodify_Logo.png" align="left" alt="Moodify Logo"></a>
     <a class="nav-link" href="/pages/downloads/index.html">Downloads</a>
     <a class="nav-link" href="/pages/games/index.html">Games</a>
     <a class="nav-link" href="/pages/apps/moodify/index.html">Moodify</a>
