--- a/pages/apps/nina-chat/index.html
+++ b/pages/apps/nina-chat/index.html
@@ -7,32 +7,172 @@
     <link rel="icon" href="/data/images/favicon.png">
     <link rel="stylesheet" href="/data/css/main.css">
     <title>Code, Plan, Imagine and Create - Nina AI | Corebell</title>
+    <style>
+        .chat-widget {
+            width: 90%;
+            max-width: 800px;
+            height: 600px;
+            margin: 20px auto;
+            border-radius: 8px;
+            background-color: #1e1e1e;
+            color: white;
+            display: flex;
+            flex-direction: column;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.7);
+        }
+
+        .chat-header {
+            padding: 15px;
+            background-color: #333;
+            text-align: center;
+            font-size: 20px;
+            font-weight: bold;
+            color: #4caf50;
+        }
+
+        .chat-messages {
+            flex: 1;
+            padding: 15px;
+            overflow-y: auto;
+            background-color: #222;
+        }
+
+        .chat-input {
+            display: flex;
+            border-top: 1px solid #444;
+            background-color: #333;
+        }
+
+        .chat-input input {
+            flex: 1;
+            padding: 10px;
+            border: none;
+            background-color: #444;
+            color: white;
+            font-size: 14px;
+        }
+
+        .chat-input button {
+            padding: 10px;
+            border: none;
+            background-color: #4caf50;
+            color: white;
+            cursor: pointer;
+            font-size: 14px;
+        }
+
+        .chat-input button:hover {
+            background-color: #45a049;
+        }
+
+        .chat-message {
+            margin: 5px 0;
+            padding: 10px;
+            border-radius: 4px;
+            max-width: 70%;
+            word-wrap: break-word;
+        }
+
+        .chat-message.user {
+            background-color: #4caf50;
+            color: white;
+            align-self: flex-end;
+        }
+
+        .chat-message.bot {
+            background-color: #444;
+            color: white;
+            align-self: flex-start;
+        }
+
+        .chat-messages::-webkit-scrollbar {
+            width: 8px;
+        }
+
+        .chat-messages::-webkit-scrollbar-thumb {
+            background: #4caf50;
+            border-radius: 4px;
+        }
+    </style>
+    <script>
+        async function sendMessage() {
+            const inputField = document.getElementById('chat-input');
+            const chatMessages = document.getElementById('chat-messages');
+            const userInput = inputField.value.trim();
+
+            if (!userInput) return;
+
+            // Append user's message
+            appendMessage(userInput, 'user');
+            inputField.value = '';
+
+            try {
+                // Call the Hugging Face API with Qwen model
+                const response = await fetch('https://api-inference.huggingface.co/models/Qwen/Qwen2.5-Coder-32B-Instruct', {
+                    method: 'POST',
+                    headers: {
+                        'Authorization': 'Bearer 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',
+                        'Content-Type': 'application/json',
+                    },
+                    body: JSON.stringify({
+                        inputs: userInput
+                    })
+                });
+
+                const data = await response.json();
+                const botReply = data?.generated_text || "Sorry, I didn't understand that.";
+                appendMessage(botReply, 'bot');
+            } catch (error) {
+                appendMessage("Error: Unable to connect to AI service.", 'bot');
+            }
+        }
+
+        function appendMessage(message, sender) {
+            const chatMessages = document.getElementById('chat-messages');
+            const messageElem = document.createElement('div');
+            messageElem.className = `chat-message ${sender}`;
+            messageElem.textContent = message;
+            chatMessages.appendChild(messageElem);
+            chatMessages.scrollTop = chatMessages.scrollHeight;
+        }
+    </script>
 </head>
-<nav>
-    <a class="nav-link" href="/"><img src="/data/images/NinaAI_Logo.png" align="left" alt="Nina Logo"></a>
-    <a class="nav-link" href="/pages/downloads/index.html">Downloads</a>
-    <a class="nav-link" href="/pages/games/index.html">Games</a>
-    <a class="nav-link" href="/pages/apps/moodify/index.html">Moodify</a>
-    <a class="nav-link" href="/pages/apps/corebell-engine/index.html">Corebell Engine</a>
-    <a class="nav-link" href="/pages/apps/nina-chat/index.html" style="background: linear-gradient(to left, #161864, #136c49);">Nina AI</a>
-    <a class="nav-link" href="/pages/blog/index.html">Blog</a>
-</nav>
-<hr>
 <body>
+    <nav>
+        <a class="nav-link" href="/"><img src="/data/images/NinaAI_Logo.png" align="left" alt="Nina Logo"></a>
+        <a class="nav-link" href="/pages/downloads/index.html">Downloads</a>
+        <a class="nav-link" href="/pages/games/index.html">Games</a>
+        <a class="nav-link" href="/pages/apps/moodify/index.html">Moodify</a>
+        <a class="nav-link" href="/pages/apps/corebell-engine/index.html">Corebell Engine</a>
+        <a class="nav-link" href="/pages/apps/nina-chat/index.html" style="background: linear-gradient(to left, #161864, #136c49);">Nina AI</a>
+        <a class="nav-link" href="/pages/blog/index.html">Blog</a>
+    </nav>
+    <hr>
+
     <h2 align="center">Code, Plan, Imagine and Create with Nina!</h2>
+
+    <div class="chat-widget">
+        <div class="chat-header">Nina AI Chat</div>
+        <div class="chat-messages" id="chat-messages"></div>
+        <div class="chat-input">
+            <input id="chat-input" type="text" placeholder="Type a message...">
+            <button onclick="sendMessage()">Send</button>
+        </div>
+    </div>
+
+    <hr>
+    <footer>
+        <ul>
+            <h3>All links</h3>
+            <a target="_blank" class="nav-link" href="mailto:rendaniman@outlook.com">Email Me</a>
+            <a target="_blank" class="nav-link" href="https://github.com/sponsor/manugeni">Sponsor Me on GitHub</a>
+            <a target="_blank" class="nav-link" href="https://github.com/wizcann">My GitHub</a>
+            <h3>Apps</h3>
+            <a class="nav-link" href="/pages/apps/moodify/index.html">Moodify</a>
+            <a class="nav-link" href="/pages/apps/nina-chat/index.html">Nina AI</a>
+            <a class="nav-link" href="/pages/apps/corebell-engine/index.html">Corebell Engine</a>
+        </ul>
+    </footer>
+    <p style="text-align: center;"> 2025 &copy Corebell. All Rights Reserved.</p>
 </body>
-<hr>
-<footer>
-    <ul>
-    <h3>All links</h3>
-    <a target="_blank" class="nav-link" href="mailto:rendaniman@outlook.com">Email Me</a>
-    <a target="_blank" class="nav-link" href="https://github.com/sponsor/wizcann">Sponsor Me on GitHub</a>
-    <a target="_blank" class="nav-link" href="https://github.com/wizcann">My GitHub</a>
-    <h3>Apps</h3>
-    <a class="nav-link" href="/pages/apps/moodify/index.html">Moodify</a>
-    <a class="nav-link" href="/pages/apps/nina-chat/index.html">Nina AI</a>
-    <a class="nav-link" href="/pages/apps/corebell-engine/index.html">Corebell Engine</a>
-    </ul>
-</footer>
-        <p style="text-align: center;"> 2025 &copy Corebell. All Rights Reserved.</p>
 </html>
