--- a/pages/apps/nina-chat/index.html
+++ b/pages/apps/nina-chat/index.html
@@ -94,48 +94,45 @@
             border-radius: 4px;
         }
     </style>
-    <script>
-        async function sendMessage() {
-            const inputField = document.getElementById('chat-input');
-            const chatMessages = document.getElementById('chat-messages');
-            const userInput = inputField.value.trim();
+<script type="module">
+    import { HfInference } from "https://cdn.jsdelivr.net/npm/@huggingface/inference/+esm";
 
-            if (!userInput) return;
+    const client = new HfInference("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");
 
-            // Append user's message
-            appendMessage(userInput, 'user');
-            inputField.value = '';
+    async function sendMessage() {
+        const inputField = document.getElementById('chat-input');
+        const userInput = inputField.value.trim();
 
-            try {
-                // Call the Hugging Face API with Qwen model
-                const response = await fetch('https://api-inference.huggingface.co/models/Qwen/Qwen2.5-Coder-32B-Instruct', {
-                    method: 'POST',
-                    headers: {
-                        'Authorization': 'Bearer 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',
-                        'Content-Type': 'application/json',
-                    },
-                    body: JSON.stringify({
-                        inputs: userInput
-                    })
-                });
+        if (!userInput) return;
 
-                const data = await response.json();
-                const botReply = data?.generated_text || "Sorry, I didn't understand that.";
-                appendMessage(botReply, 'bot');
-            } catch (error) {
-                appendMessage("Error: Unable to connect to AI service.", 'bot');
-            }
+        // Append user's message
+        appendMessage(userInput, 'user');
+        inputField.value = '';
+
+        try {
+            // Fetch response from Hugging Face Qwen model
+            const response = await client.chatCompletion({
+                model: "Qwen/Qwen2.5-Coder-32B-Instruct",
+                messages: [{ role: "user", content: userInput }],
+                max_tokens: 500
+            });
+
+            const botReply = response.choices[0].message.content || "Sorry, I didn't understand that.";
+            appendMessage(botReply, 'bot');
+        } catch (error) {
+            appendMessage("Error: Unable to connect to AI service.", 'bot');
         }
+    }
 
-        function appendMessage(message, sender) {
-            const chatMessages = document.getElementById('chat-messages');
-            const messageElem = document.createElement('div');
-            messageElem.className = `chat-message ${sender}`;
-            messageElem.textContent = message;
-            chatMessages.appendChild(messageElem);
-            chatMessages.scrollTop = chatMessages.scrollHeight;
-        }
-    </script>
+    function appendMessage(message, sender) {
+        const chatMessages = document.getElementById('chat-messages');
+        const messageElem = document.createElement('div');
+        messageElem.className = `chat-message ${sender}`;
+        messageElem.textContent = message;
+        chatMessages.appendChild(messageElem);
+        chatMessages.scrollTop = chatMessages.scrollHeight;
+    }
+</script>
 </head>
 <body>
     <nav>
