--- a/pages/apps/nina-chat/index.html
+++ b/pages/apps/nina-chat/index.html
@@ -94,45 +94,45 @@
             border-radius: 4px;
         }
     </style>
-<script type="module">
-    import { HfInference } from "https://cdn.jsdelivr.net/npm/@huggingface/inference/+esm";
+    <script type="module">
+        import { HfInference } from "https://cdn.jsdelivr.net/npm/@huggingface/inference/+esm";
 
-    const client = new HfInference("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");
+        const client = new HfInference("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");
 
-    async function sendMessage() {
-        const inputField = document.getElementById('chat-input');
-        const userInput = inputField.value.trim();
+        async function sendMessage() {
+            const inputField = document.getElementById('chat-input');
+            const userInput = inputField.value.trim();
 
-        if (!userInput) return;
+            if (!userInput) return;
 
-        // Append user's message
-        appendMessage(userInput, 'user');
-        inputField.value = '';
+            // Append user's message
+            appendMessage(userInput, 'user');
+            inputField.value = '';
 
-        try {
-            // Fetch response from Hugging Face Qwen model
-            const response = await client.chatCompletion({
-                model: "Qwen/Qwen2.5-Coder-32B-Instruct",
-                messages: [{ role: "user", content: userInput }],
-                max_tokens: 500
-            });
+            try {
+                // Fetch response from Hugging Face Qwen model
+                const response = await client.chatCompletion({
+                    model: "Qwen/Qwen2.5-Coder-32B-Instruct",
+                    messages: [{ role: "user", content: userInput }],
+                    max_tokens: 500
+                });
 
-            const botReply = response.choices[0].message.content || "Sorry, I didn't understand that.";
-            appendMessage(botReply, 'bot');
-        } catch (error) {
-            appendMessage("Error: Unable to connect to AI service.", 'bot');
+                const botReply = response.choices[0].message.content || "Sorry, I didn't understand that.";
+                appendMessage(botReply, 'bot');
+            } catch (error) {
+                appendMessage("Error: Unable to connect to AI service.", 'bot');
+            }
         }
-    }
 
-    function appendMessage(message, sender) {
-        const chatMessages = document.getElementById('chat-messages');
-        const messageElem = document.createElement('div');
-        messageElem.className = `chat-message ${sender}`;
-        messageElem.textContent = message;
-        chatMessages.appendChild(messageElem);
-        chatMessages.scrollTop = chatMessages.scrollHeight;
-    }
-</script>
+        function appendMessage(message, sender) {
+            const chatMessages = document.getElementById('chat-messages');
+            const messageElem = document.createElement('div');
+            messageElem.className = `chat-message ${sender}`;
+            messageElem.textContent = message;
+            chatMessages.appendChild(messageElem);
+            chatMessages.scrollTop = chatMessages.scrollHeight;
+        }
+    </script>
 </head>
 <body>
     <nav>
@@ -162,7 +162,7 @@
         <ul>
             <h3>All links</h3>
             <a target="_blank" class="nav-link" href="mailto:rendaniman@outlook.com">Email Me</a>
-            <a target="_blank" class="nav-link" href="https://github.com/sponsor/manugeni">Sponsor Me on GitHub</a>
+            <a target="_blank" class="nav-link" href="https://github.com/sponsor/wizcann">Sponsor Me on GitHub</a>
             <a target="_blank" class="nav-link" href="https://github.com/wizcann">My GitHub</a>
             <h3>Apps</h3>
             <a class="nav-link" href="/pages/apps/moodify/index.html">Moodify</a>
