--- a/pages/apps/corebell-engine/index.html
+++ b/pages/apps/corebell-engine/index.html
@@ -5,76 +5,152 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interface | Corebell Engine</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/main.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&display=swap');
+
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'JetBrains Mono', monospace;
+        }
+
+        body {
+            background-color: #1a1a1a;
+            color: #e0e0e0;
+            overflow: hidden;
+        }
+
+        #canvas-container {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
+
+        .loading-screen {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: #1a1a1a;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            z-index: 1000;
+            transition: opacity 0.5s ease;
+        }
+
+        .welcome-screen {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(26, 26, 26, 0.95);
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            z-index: 900;
+            opacity: 0;
+            transition: opacity 0.5s ease;
+            pointer-events: none;
+        }
+
+        .welcome-screen.show {
+            opacity: 1;
+            pointer-events: all;
+        }
+
+        .welcome-content {
+            text-align: center;
+            max-width: 600px;
+            padding: 20px;
+        }
+
+        .welcome-title {
+            color: #00ff9d;
+            font-size: 2.5em;
+            margin-bottom: 20px;
+            opacity: 0;
+            transform: translateY(20px);
+            transition: all 0.5s ease;
+        }
+
+        .welcome-text {
+            color: #e0e0e0;
+            margin-bottom: 30px;
+            line-height: 1.6;
+            opacity: 0;
+            transform: translateY(20px);
+            transition: all 0.5s ease;
+            transition-delay: 0.2s;
+        }
+
+        .welcome-button {
+            background: #00ff9d;
+            color: #1a1a1a;
+            border: none;
+            padding: 12px 30px;
+            border-radius: 4px;
+            font-size: 1.1em;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            opacity: 0;
+            transform: translateY(20px);
+            transition-delay: 0.4s;
+        }
+
+        .welcome-button:hover {
+            background: #00cc7d;
+            transform: translateY(18px);
+        }
+
+        .welcome-screen.show .welcome-title,
+        .welcome-screen.show .welcome-text,
+        .welcome-screen.show .welcome-button {
+            opacity: 1;
+            transform: translateY(0);
+        }
+
+        /* Rest of your existing CSS */
+    </style>
     <link rel="stylesheet" href="css/widgets.css">
 </head>
 <body>
     <div class="loading-screen">
         <div class="loader"></div>
+        <div style="margin-top: 20px">Loading Engine...</div>
+    </div>
+
+    <div class="welcome-screen">
+        <div class="welcome-content">
+            <h1 class="welcome-title">Welcome to 3D Engine</h1>
+            <p class="welcome-text">
+                This powerful 3D engine allows you to create and manipulate 3D objects in real-time. 
+                Use the widgets to add objects, control the camera, and load external models. 
+                Drag widgets to reposition them, and press 'C' or 'S' to quickly add cubes or spheres.
+            </p>
+            <button class="welcome-button">Get Started</button>
+        </div>
     </div>
 
     <div id="canvas-container"></div>
     
-    <div class="widget" id="stats-widget" draggable="true">
-        <div class="widget-header">
-            <span class="widget-title">Statistics</span>
-            <div class="widget-controls">
-                <button class="widget-minimize"><i class="fas fa-minus"></i></button>
-                <button class="widget-close"><i class="fas fa-times"></i></button>
-            </div>
-        </div>
-        <div class="widget-content">
-            <div>FPS: <span id="fps">60</span></div>
-            <div>Objects: <span id="object-count">0</span></div>
-            <div>Memory: <span id="memory-usage">0</span> MB</div>
-        </div>
-    </div>
+    <!-- Your existing widgets HTML -->
 
-    <div class="widget" id="controls-widget" draggable="true">
-        <div class="widget-header">
-            <span class="widget-title">Controls</span>
-            <div class="widget-controls">
-                <button class="widget-minimize"><i class="fas fa-minus"></i></button>
-                <button class="widget-close"><i class="fas fa-times"></i></button>
-            </div>
-        </div>
-        <div class="widget-content">
-            <div class="control-group">
-                <h3>Camera Controls</h3>
-                <button class="control-btn" id="orbit"><i class="fas fa-sync"></i> Orbit</button>
-                <button class="control-btn" id="pan"><i class="fas fa-arrows-alt"></i> Pan</button>
-            </div>
-            <div class="control-group">
-                <h3>Scene Controls</h3>
-                <button class="control-btn" id="add-cube"><i class="fas fa-cube"></i> Add Cube</button>
-                <button class="control-btn" id="add-sphere"><i class="fas fa-globe"></i> Add Sphere</button>
-            </div>
-        </div>
-    </div>
-
-    <div class="widget" id="file-widget" draggable="true">
-        <div class="widget-header">
-            <span class="widget-title">File Operations</span>
-            <div class="widget-controls">
-                <button class="widget-minimize"><i class="fas fa-minus"></i></button>
-                <button class="widget-close"><i class="fas fa-times"></i></button>
-            </div>
-        </div>
-        <div class="widget-content">
-            <div class="file-controls">
-                <input type="file" id="model-input" accept=".obj,.gltf,.glb" style="display: none">
-                <button class="control-btn" id="load-model">
-                    <i class="fas fa-file-import"></i> Load Model
-                </button>
-                <button class="control-btn" id="save-scene">
-                    <i class="fas fa-save"></i> Save Scene
-                </button>
-            </div>
-        </div>
-    </div>
-
+    <!-- Required Three.js dependencies -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/controls/OrbitControls.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/OBJLoader.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.7/dat.gui.min.js"></script>
+    
+    <!-- Your engine scripts -->
     <script src="js/engine/core.js"></script>
     <script src="js/engine/scene.js"></script>
     <script src="js/engine/renderer.js"></script>
@@ -82,5 +158,43 @@
     <script src="js/ui/controls.js"></script>
     <script src="js/loaders/fileLoader.js"></script>
     <script src="js/loaders/modelLoader.js"></script>
+
+    <script>
+        // Initialize everything
+        document.addEventListener('DOMContentLoaded', () => {
+            // Show loading screen
+            const loadingScreen = document.querySelector('.loading-screen');
+            const welcomeScreen = document.querySelector('.welcome-screen');
+            const startButton = document.querySelector('.welcome-button');
+
+            // Initialize engine
+            const engine = new Engine();
+            const controls = new Controls(engine);
+            const widgetManager = new WidgetManager();
+            const modelLoader = new ModelLoader(engine.scene);
+            const fileLoader = new FileLoader(engine, modelLoader);
+
+            // Hide loading screen and show welcome screen after everything is loaded
+            setTimeout(() => {
+                loadingScreen.style.opacity = '0';
+                setTimeout(() => {
+                    loadingScreen.style.display = 'none';
+                    welcomeScreen.classList.add('show');
+                }, 500);
+            }, 1500);
+
+            // Handle start button click
+            startButton.addEventListener('click', () => {
+                welcomeScreen.classList.remove('show');
+                setTimeout(() => {
+                    welcomeScreen.style.display = 'none';
+                }, 500);
+            });
+
+            // Add some initial objects for visual interest
+            engine.scene.addCube({ x: -2, y: 0, z: -2 });
+            engine.scene.addSphere({ x: 2, y: 0, z: 2 });
+        });
+    </script>
 </body>
 </html>
