--- a/pages/index.html
+++ b/pages/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link rel="icon" href="/data/images/favicon.png">
     <link rel="stylesheet" href="/data/css/main.css">
-    <title>Access violated. | Corebell</title>
+    <title>Not accessible. | Corebell</title>
 </head>
 <body>
     <h1 style="text-align: center; font-size: xxx-large;">You CANNOT access this directory.</h1>
@@ -13,12 +13,12 @@
     <ul>
     <h3>All links</h3>
     <a target="_blank" class="nav-link" href="mailto:rendaniman@outlook.com">Email Me</a>
-    <a target="_blank" class="nav-link" href="https://github.com/sponsor/wizcann">Sponsor Me on GitHub</a>
-    <a target="_blank" class="nav-link" href="https://github.com/wizcann">My GitHub</a>
+    <a target="_blank" class="nav-link" href="https://github.com/sponsors/manugeni">Sponsor Me</a>
+    <a target="_blank" class="nav-link" href="https://github.com/manugeni">My GitHub</a>
     <h3>Apps</h3>
-    <a class="nav-link" href="/pages/apps/moodify/index.html">Moodify</a>
-    <a class="nav-link" href="/pages/apps/nina-chat/index.html">Nina AI</a>
-    <a class="nav-link" href="/pages/apps/corebell-engine/index.html">Corebell Engine</a>
+    <a class="nav-link" href="/pages/apps/moodify/">Moodify</a>
+    <a class="nav-link" href="/pages/apps/nina-chat/">Nina AI</a>
+    <a class="nav-link" href="/pages/apps/corebell-engine/">Corebell Engine</a>
     </ul>
 </footer>
         <p style="text-align: center;"> 2025 &copy Corebell. All Rights Reserved.</p>
