--- a/pages/games/index.html
+++ b/pages/games/index.html
@@ -11,12 +11,12 @@
 </head>
 <nav>
     <a class="nav-link" href="/index.html"><img src="/data/images/Corebell_Logo.png" align="left" alt="Corebell Logo"></a>
-    <a class="nav-link" href="/pages/downloads/index.html">Downloads</a>
-    <a class="nav-link" href="/pages/games/index.html">Games</a>
-    <a class="nav-link" href="/pages/apps/moodify/index.html">Moodify</a>
-    <a class="nav-link" href="/pages/apps/corebell-engine/index.html">Corebell Engine</a>
-    <a class="nav-link" href="/pages/apps/nina-chat/index.html" style="background: linear-gradient(to left, #161864, #136c49);">Nina AI</a>
-    <a class="nav-link" href="/pages/blog/index.html">Blog</a>
+    <a class="nav-link" href="/pages/downloads/">Downloads</a>
+    <a class="nav-link" href="/pages/games/">Games</a>
+    <a class="nav-link" href="/pages/apps/moodify/">Moodify</a>
+    <a class="nav-link" href="/pages/apps/corebell-engine/">Corebell Engine</a>
+    <a class="nav-link" href="/pages/apps/nina-chat/">Nina AI</a>
+    <a class="nav-link" href="/pages/blog/">Blog</a>
 </nav>
 <hr>
 <body>
@@ -39,12 +39,12 @@
     <ul>
     <h3>All links</h3>
     <a target="_blank" class="nav-link" href="mailto:rendaniman@outlook.com">Email Me</a>
-    <a target="_blank" class="nav-link" href="https://github.com/sponsor/wizcann">Sponsor Me on GitHub</a>
-    <a target="_blank" class="nav-link" href="https://github.com/wizcann">My GitHub</a>
+    <a target="_blank" class="nav-link" href="https://github.com/sponsors/manugeni">Sponsor Me</a>
+    <a target="_blank" class="nav-link" href="https://github.com/manugeni">My GitHub</a>
     <h3>Apps</h3>
-    <a class="nav-link" href="/pages/apps/moodify/index.html">Moodify</a>
-    <a class="nav-link" href="/pages/apps/nina-chat/index.html">Nina AI</a>
-    <a class="nav-link" href="/pages/apps/corebell-engine/index.html">Corebell Engine</a>
+    <a class="nav-link" href="/pages/apps/moodify/">Moodify</a>
+    <a class="nav-link" href="/pages/apps/nina-chat/">Nina AI</a>
+    <a class="nav-link" href="/pages/apps/corebell-engine/">Corebell Engine</a>
     </ul>
 </footer>
         <p style="text-align: center;"> 2025 &copy Corebell. All Rights Reserved.</p>
