--- a/pages/apps/corebell-engine/index.html
+++ b/pages/apps/corebell-engine/index.html
@@ -134,8 +134,8 @@
 
     <div class="welcome-screen">
         <div class="welcome-content">
-            <h1 class="welcome-title">3D Engine</h1>
-            <p class="welcome-text">Loading completed. Click to start.</p>
+            <h1 class="welcome-title">Corebell Engine</h1>
+            <p class="welcome-text">Click to start.</p>
             <button class="welcome-button">Launch Engine</button>
         </div>
     </div>
