--- a/pages/apps/corebell-engine/index.html
+++ b/pages/apps/corebell-engine/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>3D Engine with Interface</title>
+    <title>Interface | Corebell Engine</title>
     <style>
         * {
             margin: 0;
