--- a/pages/apps/corebell-engine/index.html
+++ b/pages/apps/corebell-engine/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="referrer" content="strict-origin">
+    <link rel="icon" href="/data/images/favicon.png">
+    <link rel="stylesheet" href="/data/css/main.css">
     <title>Interface | Corebell Engine</title>
     <style>
         * {
